[package]
name = "lym"
version = "0.1.69"
edition = "2024"

[dependencies]
base64 = "0.22.1"
colored = "3.0.0"
dialoguer = "0.12.0"
dirs = "6.0.0"
getch-rs = "0.2.0"
glob = "0.3.3"
indicatif = "0.18.3"
once_cell = "1.21.3"
reqwest = { version = "0.12.24", features = ["blocking", "json", "stream"] }
tokio = { version = "1.48", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha1 = "0.10.6"
ctrlc = "3.4"

[profile.dev]
opt-level = 0
debug = true
incremental = true
codegen-units = 16
panic = "unwind"

[profile.release]
opt-level = 3
debug = false
lto = "fat"
codegen-units = 1
strip = false
panic = "abort"
